--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover how to get free Google Play redeem codes. Explore the latest methods and tools shared on our GitHub repositories for 2024.">
     <meta name="keywords" content="Free Google Play Redeem Code, Google Play Gift Card Codes 2024, How to Get Free Google Play Code, GitHub Resources, Free Codes 2024">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Roni">
+    <meta name="google-site-verification" content="s2Mll4vAzEOK-QGJjM9bKFK7BBxPELV6VAbqMv3gfJg" />
     <title>Free Google Play Redeem Codes 2024 - GitHub Resources</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <style>
@@ -73,7 +74,7 @@
         <p>These links provide detailed information and the latest updates to help you acquire free Google Play redeem codes. Visit the GitHub repositories to explore more.</p>
     </div>
     <footer>
-        <p>&copy; 2024 Your Website Name. All Rights Reserved.</p>
+        <p>&copy; 2024 Asahan619988.github.io. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
